--- a/templates/application_longhorn.yaml
+++ b/templates/application_longhorn.yaml
@@ -8,15 +8,50 @@ metadata:
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
- project: default
- source:
+ project: runtime
+source:
   repoURL: 'https://charts.longhorn.io'
-  chart: longhorn
   targetRevision: 1.3.2
- destination:
+  helm:
+    releaseName: longhorn
+    values: |
+      fullnameOverride: longhorn
+      defaultSettings:
+        taintToleration: "home=true:NoSchedule"
+        priorityClass: system-node-critical
+      longhornManager:
+        tolerations:
+            - effect: NoSchedule
+              key: home
+              operator: Exists
+      longhornDriver:
+        tolerations:
+            - effect: NoSchedule
+              key: home
+              operator: Exists
+      longhornUI:
+        tolerations:
+            - effect: NoSchedule
+              key: home
+              operator: Exists
+      persistence:
+        reclaimPolicy: Retain
+      ingress:
+        enabled: true
+        host: ***
+  chart: longhorn
+destination:
   server: 'https://kubernetes.default.svc'
-  namespace: longhorn
- syncPolicy:
-  automated: {}
+  namespace: longhorn-system
+syncPolicy:
+  automated:
+    selfHeal: true
   syncOptions:
+    - Validate=false
     - CreateNamespace=true
+  retry:
+    limit: 5
+    backoff:
+      duration: 5s
+      factor: 2
+      maxDuration: 3m
