--- a/templates/application_longhorn.yaml
+++ b/templates/application_longhorn.yaml
@@ -8,12 +8,37 @@ metadata:
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
- project: default
+project: default
 source:
   repoURL: 'https://charts.longhorn.io'
-  targetRevision: 1.4.1
+  targetRevision: 1.3.2
   helm:
     releaseName: longhorn
+    values: |
+      fullnameOverride: longhorn
+      defaultSettings:
+        taintToleration: "home=true:NoSchedule"
+        priorityClass: system-node-critical
+      longhornManager:
+        tolerations:
+            - effect: NoSchedule
+              key: home
+              operator: Exists
+      longhornDriver:
+        tolerations:
+            - effect: NoSchedule
+              key: home
+              operator: Exists
+      longhornUI:
+        tolerations:
+            - effect: NoSchedule
+              key: home
+              operator: Exists
+      persistence:
+        reclaimPolicy: Retain
+      ingress:
+        enabled: true
+        host: ***
   chart: longhorn
 destination:
   server: 'https://kubernetes.default.svc'
