--- a/templates/application_longhorn.yaml
+++ b/templates/application_longhorn.yaml
@@ -8,25 +8,42 @@ metadata:
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
-project: default
-source:
-  repoURL: 'https://charts.longhorn.io'
-  targetRevision: 1.4.1
-  helm:
-    releaseName: longhorn
-  chart: longhorn
+ project: default
+ source:
+   chart: longhorn
+   repoURL: 'https://charts.longhorn.io'
+   targetRevision: 1.3.2
+   helm:
+    values: |
+      fullnameOverride: longhorn
+      defaultSettings:
+        taintToleration: "home=true:NoSchedule"
+        priorityClass: system-node-critical
+      longhornManager:
+        tolerations:
+            - effect: NoSchedule
+              key: home
+              operator: Exists
+      longhornDriver:
+        tolerations:
+            - effect: NoSchedule
+              key: home
+              operator: Exists
+      longhornUI:
+        tolerations:
+            - effect: NoSchedule
+              key: home
+              operator: Exists
+      persistence:
+        reclaimPolicy: Retain
+      ingress:
+        enabled: true
+        host: ***  
 destination:
   server: 'https://kubernetes.default.svc'
   namespace: longhorn-system
 syncPolicy:
   automated:
-    selfHeal: true
+    prune: true
   syncOptions:
-    - Validate=false
     - CreateNamespace=true
-  retry:
-    limit: 5
-    backoff:
-      duration: 5s
-      factor: 2
-      maxDuration: 3m
