--- a/values.yaml
+++ b/values.yaml
@@ -1,20 +1,20 @@
 # Global
 ## Set the domain to create nginx for argocd and other service ingress
-domain: 
+domain: demo.bajas.org
 ## Set local if you wish to start the local path provisioner for "local-path" in your cluster 
 storage:
   local:
-    enable: true
+    enable: false
 # Application specific
 githubactionsrunner:
   enable: false
   token: ""
 cats:
   #storageClass: "local-path"
-  storageClass: "default-storageclass"
+  storageClass: "longhorn"
 observability:
   #storageClass: "local-path"
-  storageClass: "default-storageclass"
+  storageClass: "longhorn"
   pdkey:
   storageSize: 10Gi
   retention: 5d
@@ -29,4 +29,4 @@ logging:
 metallb:
 # This only passes through to the bootstrap resources a single address pool, 
 # you can use a range if you you want to do something more complex
-  addresspool: 10.0.0.85-10.0.0.90
+  addresspool: 10.0.0.80-10.0.0.90
