--- a/bootstrap-resources/templates/metallb.yaml
+++ b/bootstrap-resources/templates/metallb.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.metallb.enable }}
 apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
 metadata:
@@ -8,3 +9,4 @@ metadata:
 spec:
   addresses:
   - {{ .Values.metallb.addresspool}}
+{{- end }}
