--- a/templates/application_nginx.yaml
+++ b/templates/application_nginx.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.metallb.enable }}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -23,3 +24,4 @@ spec:
       prune: true
     syncOptions:
     - CreateNamespace=true
+{{- end }}
