--- a/bootstrap-resources/templates/ingress.yaml
+++ b/bootstrap-resources/templates/ingress.yaml
@@ -20,9 +20,9 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: observability-grafana
+            name: cats
             port:
-                number: 3000
+                number: 8080
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
