--- a/bootstrap-resources/templates/ingress.yaml
+++ b/bootstrap-resources/templates/ingress.yaml
@@ -5,13 +5,13 @@ metadata:
   name: ingress-grafana
   namespace: observability
   annotations:
-    kubernetes.io/ingress.class: "nginx" 
+    kubernetes.io/ingress.class: "traefik" 
     cert-manager.io/issuer: "letsencrypt-ci"
 spec:
   tls:
   - hosts:
     - grafana.{{ .Values.domain }}
-    secretName: nginx-grafana-tls
+    secretName: traefik-grafana-tls
   rules:
   - host: grafana.{{ .Values.domain }}
     http:
@@ -20,9 +20,9 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: cats
+            name: observability-grafana
             port:
-                number: 8080
+                number: 80
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -30,13 +30,13 @@ metadata:
   name: ingress-argocd
   namespace: argocd
   annotations:
-    kubernetes.io/ingress.class: "nginx" 
+    kubernetes.io/ingress.class: "traefik" 
     cert-manager.io/issuer: "letsencrypt-ci"
 spec:
   tls:
   - hosts:
     - argocd.{{ .Values.domain }}
-    secretName: nginx-argocd-tls
+    secretName: traefik-argocd-tls
   rules:
   - host: argocd.{{ .Values.domain }}
     http:
@@ -47,5 +47,5 @@ spec:
           service:
             name: argocd-server
             port: 
-                number: 8080
+                number: 80
 {{- end }}
