--- a/bootstrap-resources/templates/clusterissuer.yaml
+++ b/bootstrap-resources/templates/clusterissuer.yaml
@@ -1,6 +1,18 @@
 apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
+kind: Issuer
 metadata:
-  name: letsencrypt-ci
+ name: letsencrypt-ci
+ namespace: whoami
 spec:
-  selfSigned: {}
+ acme:
+   email: mail@bajas.org
+   # We use the staging server here for testing to avoid hitting
+   server: https://acme-staging-v02.api.letsencrypt.org/directory
+   privateKeySecretRef:
+     # if not existing, it will register a new account and stores it
+     name: example-issuer-account-key
+   solvers:
+     - http01:
+         # The ingressClass used to create the necessary ingress routes
+         ingress:
+           class: traefik
