--- a/bootstrap-resources/templates/clusterissuer.yaml
+++ b/bootstrap-resources/templates/clusterissuer.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
  name: letsencrypt-ci
- namespace: whoami
+ namespace: cert-manager
 spec:
  acme:
    email: mail@bajas.org
