--- a/bootstrap-resources/templates/clusterissuer.yaml
+++ b/bootstrap-resources/templates/clusterissuer.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
  name: letsencrypt-ci
- namespace: cert-manager
+ namespace: default
 spec:
  acme:
    email: mail@bajas.org
