--- a/bootstrap-resources/templates/lets-encrypt-grafana.yaml
+++ b/bootstrap-resources/templates/lets-encrypt-grafana.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: grafana.demo.bajas.org
-  namespace: cert-manager
+  namespace: default
 spec:
   # Secret names are always required.
   secretName: traefik-grafana-tls
