--- a/templates/application_traefik.yaml
+++ b/templates/application_traefik.yaml
@@ -1,23 +1,23 @@
-{{- if .Values.nginx.enable }}
+{{- if .Values.traefik.enable }}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nginx
+  name: traefik
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "2"
 spec:
   destination:
-    namespace: nginx-ingress
+    namespace: traefik
     server: https://kubernetes.default.svc
   project: default
   source:
-    chart: nginx-ingress
+    chart: traefik
     helm:
       parameters:
       - name: controller.kind
         value: daemonset
-    repoURL: https://helm.nginx.com/stable
+    repoURL: https://traefik.github.io/charts
     targetRevision: 0.14.0
   syncPolicy:
     automated:
