--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ domain: demo.bajas.org
 ## Set local if you wish to start the local path provisioner for "local-path" in your cluster 
 storage:
   local:
-    enable: false
+    enable: true
 # Application specific
 githubactionsrunner:
   enable: false
