--- a/bootstrap-resources/templates/ingress.yaml
+++ b/bootstrap-resources/templates/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: observability
   annotations:
     kubernetes.io/ingress.class: "nginx" 
-    cert-manager.io/issuer: "selfsigned"
+    #cert-manager.io/issuer: "selfsigned"
 spec:
   tls:
   - hosts:
@@ -31,7 +31,7 @@ metadata:
   namespace: argocd
   annotations:
     kubernetes.io/ingress.class: "nginx" 
-    cert-manager.io/issuer: "selfsigned"
+    #cert-manager.io/issuer: "selfsigned"
 spec:
   tls:
   - hosts:
