--- a/bootstrap-resources/templates/clusterissuer.yaml
+++ b/bootstrap-resources/templates/clusterissuer.yaml
@@ -5,3 +5,10 @@ metadata:
   namespace: sandbox
 spec:
   selfSigned: {}
+
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: selfsigned-cluster-issuer
+spec:
+  selfSigned: {}
