--- a/bootstrap-resources/templates/ingress.yaml
+++ b/bootstrap-resources/templates/ingress.yaml
@@ -31,7 +31,7 @@ metadata:
   namespace: argocd
   annotations:
     kubernetes.io/ingress.class: "nginx" 
-    cert-manager.io/issuer: "selfsigned-issuer"
+    cert-manager.io/issuer: "selfsigned-cluster-issuer"
 spec:
   tls:
   - hosts:
