--- a/bootstrap-resources/templates/ingress.yaml
+++ b/bootstrap-resources/templates/ingress.yaml
@@ -31,12 +31,12 @@ metadata:
   namespace: argocd
   annotations:
     kubernetes.io/ingress.class: "nginx" 
-    cert-manager.io/issuer: "selfsigned-cluster-issuer"
+    cert-manager.io/issuer: "selfsigned-issuer"
 spec:
   tls:
   - hosts:
     - argocd.{{ .Values.domain }}
-    secretName: argocd-secret-tls
+    #secretName: argocd-secret-tls
   rules:
   - host: argocd.{{ .Values.domain }}
     http:
@@ -45,7 +45,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: argocd-server
+            name: cats
             port: 
                 number: 80
 {{- end }}
