--- a/bootstrap-resources/templates/ingress.yaml
+++ b/bootstrap-resources/templates/ingress.yaml
@@ -33,9 +33,9 @@ metadata:
     kubernetes.io/ingress.class: "nginx" 
     cert-manager.io/issuer: "selfsigned-issuer"
 spec:
-  tls:
-  - hosts:
-    - argocd.{{ .Values.domain }}
+  #tls:
+  #- hosts:
+   # - argocd.{{ .Values.domain }}
     #secretName: argocd-secret-tls
   rules:
   - host: argocd.{{ .Values.domain }}
